# eco-pymes-bg

./: .env.example  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
DAG/: Dockerfile  requirements.txt
DAG/dags/: step1.py  step2.py  step3.py  step4.py  step5.py
RAG/: Dockerfile  pyproject.toml
RAG/src/bgchallenge/: main.py
RAG/tests/: test_main.py
bg-confianza-plus-frontend/: pnpm-lock.yaml
bg-confianza-plus-frontend/src/app/: page.tsx
bg-confianza-plus-frontend/src/app/pymes/: page.tsx
bg-confianza-plus-frontend/src/components/: ChatHeader.tsx  ChatInput.tsx  chat.tsx
bg-confianza-plus-frontend/src/lib/: types.tsx
bg-confianza-plus-frontend/src/modules/auth/application/: login.ts
bg-confianza-plus-frontend/src/modules/pymes/application/: create.tsx  getPymeByEmail.tsx
bg-confianza-plus-frontend/src/modules/pymes/domain/: Pyme.ts  PymeRepository.ts
bg-confianza-plus-frontend/src/modules/pymes/infrastructure/: DynamoDBPymeRepository.ts
bg-confianza-plus-frontend/src/modules/share/domain/: Response.ts
bg-confianza-plus-frontend/src/modules/share/infrastructure/: DynamoDBRepository.ts
data-pdf-service/: .gitignore  main.py  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ChatMessages.tsx  ChatSidebar.tsx
frontend/src/modules/pymes/infrastructure/: DynamoDBPymeRepository.ts  actions.tsx
gen-pdf-service/: Dockerfile
